Activate Real Monetization

--- a/test-game.html
+++ b/test-game.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stack Tower Neon - TEST VERSION</title>
+    <title>Stack Tower Neon - MONETIZATION LIVE</title>
+    
+    <!-- Google AdSense - REAL MONETIZATION ACTIVE -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4129506161314540" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap');
         
