PRODUCTION READY - ADS ACTIVATED FOR NETLIFY DEPLOY

--- a/index.html
+++ b/index.html
@@ -1559,18 +1559,8 @@
             }
         });
         
-        // PWA functionality (will work when deployed)
-        if ('serviceWorker' in navigator && window.location.protocol === 'https:') {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
-                    .then(registration => {
-                        console.log('🚀 SW registered:', registration.scope);
-                    })
-                    .catch(error => {
-                        console.log('❌ SW registration failed:', error);
-                    });
-            });
-        }
+        // PWA functionality (only for HTTPS/production)
+        // Disabled for local testing
         
         // Initialize
         setTimeout(() => {
