UPDATE ANALYTICS ID - G-633RQLC6T0

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Stack Tower Neon - Juego Adictivo | Gratis Online</title>
     
     <!-- Google Analytics 4 - Revenue Tracking -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1XEFL9BL9S"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-633RQLC6T0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-1XEFL9BL9S', {
+        gtag('config', 'G-633RQLC6T0', {
             custom_map: {'custom_parameter_1': 'revenue_source'},
             send_page_view: true,
             allow_google_signals: true,
