🔧 FIX: Corregir ID de pantalla game over (gameover-screen vs game-over-screen)

--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
                 }
                 
                 document.getElementById('game-screen').style.display = 'none';
-                document.getElementById('game-over-screen').style.display = 'block';
+                document.getElementById('gameover-screen').style.display = 'block';
             }, 500);
         }
 
