🔧 FIX: Corregir salto de línea en startGame() para que funcione JUGAR OTRA VEZ

--- a/index.html
+++ b/index.html
@@ -558,7 +558,8 @@
         
         function startGame() {
             // Mostrar interstitial ad ocasionalmente
-            showInterstitialAdFixed();            gameState.score = 0;
+            showInterstitialAdFixed();
+            gameState.score = 0;
             gameState.level = 1;
             gameState.blocks = [];
             gameState.currentBlock = null;
