Implementar leaderboard global unificado en Stack Tower Neon

--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
         <li>Sugiere nuevas ideas</li>
         <li>Apoya con donaciones (opcional)</li>
       </ul>
-      <p><strong>Contacto:</strong> <a href="mailto:citry84@gmail.com">citry84@gmail.com</a></p>
+      <p><strong>Contacto:</strong> <a href="mailto:lipastudios4@gmail.com">lipastudios4@gmail.com</a></p>
     </div>
   </div>
 </body>
