--- a/help.html
+++ b/help.html
@@ -187,7 +187,7 @@
     <div class="card">
       <h2>🆘 ¿Necesitas Más Ayuda?</h2>
       <p>Si tienes más preguntas o encuentras algún problema:</p>
-      <p>📧 <a href="mailto:citry84@gmail.com">citry84@gmail.com</a></p>
+      <p>📧 <a href="mailto:lipastudios4@gmail.com">lipastudios4@gmail.com</a></p>
       <p>📱 <a href="/contact.html">Página de Contacto</a></p>
     </div>
   </div>
