--- a/news.html
+++ b/news.html
@@ -186,7 +186,7 @@
     <div class="card">
       <h2>📞 Mantente Conectado</h2>
       <p>¿Quieres recibir las últimas noticias directamente?</p>
-      <p>📧 <a href="mailto:citry84@gmail.com?subject=Suscribirse a Noticias">Suscríbete a nuestro boletín</a></p>
+      <p>📧 <a href="mailto:lipastudios4@gmail.com?subject=Suscribirse a Noticias">Suscríbete a nuestro boletín</a></p>
       <p>📱 <a href="/contact.html">Síguenos en redes sociales</a></p>
     </div>
   </div>
