--- a/privacy.html
+++ b/privacy.html
@@ -132,7 +132,7 @@
     <div class="card">
       <h2>7. Contacto</h2>
       <p>Para cualquier consulta sobre privacidad:</p>
-      <p>Email: <a href="mailto:citry84@gmail.com">citry84@gmail.com</a></p>
+      <p>Email: <a href="mailto:lipastudios4@gmail.com">lipastudios4@gmail.com</a></p>
       <p>Desarrollador: LIPA Studios</p>
     </div>
 
