--- a/terms.html
+++ b/terms.html
@@ -130,7 +130,7 @@
     <div class="card">
       <h2>10. Contacto</h2>
       <p>Para consultas sobre estos términos:</p>
-      <p>Email: <a href="mailto:citry84@gmail.com">citry84@gmail.com</a></p>
+      <p>Email: <a href="mailto:lipastudios4@gmail.com">lipastudios4@gmail.com</a></p>
       <p>Desarrollador: LIPA Studios</p>
     </div>
 
