--- a/index.html
+++ b/index.html
@@ -1420,5 +1420,8 @@ function shareScoreOriginal() {
         <a href="/help.html" style="color: #00ffff; margin: 0 10px;">Ayuda</a>
         <a href="/news.html" style="color: #00ffff; margin: 0 10px;">Noticias</a>
     </div>
+    
+    <!-- MONETAG MULTI TAG -->
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="176544" async data-cfasync="false"></script>
 </body>
 </html>
